made parser sensitive to newlines; fixes test

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,10 +1,15 @@
 Terms = $(wildcard tests/*)
 
 test: llvm.tbl
-	@for Term in $(Terms) ;\
+	@for Prog in $(Terms) ;\
 	do \
-		sglr -t -p llvm.tbl -i $$Term -o /dev/null ; \
+		if sglr -t -p llvm.tbl -i $$Prog -o /dev/null; then \
+			echo "PASS  " $$Prog; \
+		else \
+			echo "FAIL  " $$Prog; \
+		fi \
 	done
+#-o /dev/null
 	
 parse-%: llvm.tbl %
 	sglr -t -v -p llvm.tbl -i $*
@@ -14,6 +19,6 @@ llvm.def: llvm.sdf
 
 llvm.tbl: llvm.def
 	sdf2table -m llvm -i $< -o $@
-	
+
 clean:
 	rm -f llvm.tbl llvm.def
