Assume the C semantics is located in $C_SEMANTICS.

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -7,8 +7,7 @@ default: $(GRAMMAR).tbl
 
 # Simple test harness
 # We (naively) assume clang will compile all of the C tests without error.
-# TODO: $C_SEMANTICS env variable?
-C_TESTS_DIRS = ~/c-semantics/tests/unitTests
+C_TESTS_DIRS = $(C_SEMANTICS)/tests/unitTests
 C_TESTS = $(foreach dir, $(C_TESTS_DIRS), $(wildcard $(dir)/*.c))
 LL_TESTS_DIRS = tests gcc-torture
 LL_TESTS = $(foreach dir, $(LL_TESTS_DIRS), $(wildcard $(dir)/*.ll))
