Create an unparseable .ll file in case clang fails so that the test harness does not mistakingly count the test as a pass (empty files always parse).

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -30,7 +30,7 @@ alltests: lltests ctests
 
 %.ll: %.c
 	@if ! clang -w -emit-llvm -S $< -o $@; then \
-		touch $@; \
+		echo "CLANG FAILURE" > $@; \
 		echo "FAIL (clang)   $<"; \
 	fi
 
