can now do comparisons & branching; able to run sumn

--- a/semantics/Makefile
+++ b/semantics/Makefile
@@ -1,11 +1,14 @@
 llvm-compiled.maude: llvm.k llvm-syntax.k llvm-semantics.k
 	kompile llvm
 	
-test: llvm-compiled.maude mem.ll
-	krun mem.ll
+test: llvm-compiled.maude sumn.ll
+	krun sumn.ll
 
-xml: mem.format.xml
+xml: sumn.format.xml
 	cat $<
+
+kast: sumn.format.xml
+	cat $< | perl ../tools/xmlToK.pl
 	
 	
 %.xml: %.ll
