--- a/tools/llvm-xml-ir/CMakeLists.txt
+++ b/tools/llvm-xml-ir/CMakeLists.txt
@@ -8,7 +8,7 @@ include_directories(include)
 if (NOT CMAKE_BUILD_TYPE)
   set (CMAKE_BUILD_TYPE "Release")
 endif()
-#set (CMAKE_BUILD_TYPE "Debug")
+set (CMAKE_BUILD_TYPE "Debug")
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
 
