fixed problem with make kast

--- a/semantics/Makefile
+++ b/semantics/Makefile
@@ -1,4 +1,4 @@
-CURRTEST ?= ../tests/gcc-torture/931004-7.ll
+CURRTEST ?= ../tests/gcc-torture/20000113-1.ll
 
 llvm-compiled.maude: llvm.k llvm-syntax.k llvm-semantics.k
 	$(K_BASE)/core/kompile llvm
@@ -10,7 +10,7 @@ xml:
 	../dist/llvm-dis-xml $(CURRTEST) -o - | xmllint --format -
 
 kast:
-	cat $(CURRTEST) | perl ../dist/xmlToK.pl
+	cat $(CURRTEST) | ../dist/llvm-dis-xml $(CURRTEST) -o - | perl ../dist/xmlToK.pl
 
 clean:
 	rm -f llvm-compiled.maude
