adding llvm-tests to regression suite

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,7 +2,7 @@ TEST_DIRECTORIES = general gcc-torture
 TEST_TARGETS = $(foreach dir,  $(TEST_DIRECTORIES), $(dir)/results/krun-results.xml)
 
 # regression tests
-REGRESSION_DIRECTORIES = regression/general regression/gcc-torture
+REGRESSION_DIRECTORIES = regression/general regression/gcc-torture $(shell find regression/llvm-tests -type d)
 REGRESSION_TARGETS = $(foreach dir,  $(REGRESSION_DIRECTORIES), $(dir)/results/krun-results.xml)
 
 # regression tests
