added -u flag to speed up compilation

--- a/semantics/Makefile
+++ b/semantics/Makefile
@@ -1,7 +1,7 @@
 CURRTEST ?= ../tests/gcc-torture/20000113-1.ll
 
 llvm-compiled.maude: llvm.k llvm-syntax.k llvm-semantics.k
-	$(K_BASE)/core/kompile llvm
+	$(K_BASE)/core/kompile -u llvm
 
 test: llvm-compiled.maude $(CURRTEST)
 	$(K_BASE)/core/krun $(CURRTEST)
