Rename llvm-xml-ir -> llvm-dis-xml.
--HG--
rename : tools/llvm-xml-ir/CMakeLists.txt => tools/llvm-dis-xml/CMakeLists.txt
rename : tools/llvm-xml-ir/LICENSE.txt => tools/llvm-dis-xml/LICENSE.txt
rename : tools/llvm-xml-ir/include/base64encode.h => tools/llvm-dis-xml/include/base64encode.h
rename : tools/llvm-xml-ir/include/llvm-xml-ir/AsmXMLWriter.h => tools/llvm-dis-xml/include/llvm-dis-xml/AsmXMLWriter.h
rename : tools/llvm-xml-ir/include/llvm-xml-ir/Operator.def => tools/llvm-dis-xml/include/llvm-dis-xml/Operator.def
rename : tools/llvm-xml-ir/include/llvm-xml-ir/RawWriter.h => tools/llvm-dis-xml/include/llvm-dis-xml/RawWriter.h
rename : tools/llvm-xml-ir/include/llvm-xml-ir/SlotTracker.h => tools/llvm-dis-xml/include/llvm-dis-xml/SlotTracker.h
rename : tools/llvm-xml-ir/include/llvm-xml-ir/XMLIROStream.h => tools/llvm-dis-xml/include/llvm-dis-xml/XMLIROStream.h
rename : tools/llvm-xml-ir/lib/ASMXMLWriter/AsmXMLWriter.cc => tools/llvm-dis-xml/lib/ASMXMLWriter/AsmXMLWriter.cc
rename : tools/llvm-xml-ir/lib/ASMXMLWriter/CMakeLists.txt => tools/llvm-dis-xml/lib/ASMXMLWriter/CMakeLists.txt
rename : tools/llvm-xml-ir/lib/ASMXMLWriter/RawWriter.cc => tools/llvm-dis-xml/lib/ASMXMLWriter/RawWriter.cc
rename : tools/llvm-xml-ir/lib/ASMXMLWriter/SlotTracker.cc => tools/llvm-dis-xml/lib/ASMXMLWriter/SlotTracker.cc
rename : tools/llvm-xml-ir/lib/ASMXMLWriter/XMLIROStream.cc => tools/llvm-dis-xml/lib/ASMXMLWriter/XMLIROStream.cc
rename : tools/llvm-xml-ir/lib/ASMXMLWriter/base64encode.cc => tools/llvm-dis-xml/lib/ASMXMLWriter/base64encode.cc
rename : tools/llvm-xml-ir/lib/CMakeLists.txt => tools/llvm-dis-xml/lib/CMakeLists.txt
rename : tools/llvm-xml-ir/make/Modules/FindLLVM.cmake => tools/llvm-dis-xml/make/Modules/FindLLVM.cmake
rename : tools/llvm-xml-ir/scripts/xml-test-wrapper.py => tools/llvm-dis-xml/scripts/xml-test-wrapper.py
rename : tools/llvm-xml-ir/tests/CMakeLists.txt => tools/llvm-dis-xml/tests/CMakeLists.txt
rename : tools/llvm-xml-ir/tests/c-semantics/CMakeList

--- a/tools/llvm-dis-xml/CMakeLists.txt
+++ b/tools/llvm-dis-xml/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 2.6)
-project (llvm-xml-ir)
+project (llvm-dis-xml)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/make/Modules)
 
 find_package(LLVM 3.0 REQUIRED)
