--- a/tools/llvm-dis-xml/tools/CMakeLists.txt
+++ b/tools/llvm-dis-xml/tools/CMakeLists.txt
@@ -4,4 +4,4 @@ set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__STDC_LIMIT_MACROS=1 -D__STDC_CONST
 
 add_executable (llvm-dis-xml llvm-dis-xml.cc)
 set_target_properties (llvm-dis-xml PROPERTIES LINK_FLAGS ${LLVM_LFLAGS})
-target_link_libraries (llvm-dis-xml LLVMXMLIRASMXMLWriter ${LLVM_LIBS})
+target_link_libraries (llvm-dis-xml AsmXMLWriter ${LLVM_LIBS})
