Rename xmlToK.pl -> xml2k.
--HG--
rename : tools/xmlToK.pl => tools/xml2k

--- a/semantics/Makefile
+++ b/semantics/Makefile
@@ -13,7 +13,7 @@ xml:
 	../dist/bin/llvm-dis-xml $(CURRTEST) -o - | xmllint --format -
 
 kast:
-	cat $(CURRTEST) | ../dist/bin/llvm-dis-xml $(CURRTEST) -o - | perl ../dist/bin/xmlToK.pl
+	cat $(CURRTEST) | ../dist/bin/llvm-dis-xml $(CURRTEST) -o - | perl ../dist/bin/xml2k
 
 ll:
 	cat $(CURRTEST)
