cleaned up stuff and improved pdf output

--- a/semantics/Makefile
+++ b/semantics/Makefile
@@ -1,4 +1,6 @@
 CURRTEST ?= ../tests/gcc-torture/20000113-1.ll
+IGNORED_MODULES = "LLVM-STANDARD-LIBRARY-PREPROCESS\|LLVM-SYSCALLS-SYNTAX\|LLVM-SYSCALLS-PREPROCESS\|LLVM-CLEAN-TREE\|LLVM-HELPERS\|LLVM-START-AND-STOP\|LLVM-HELPERS-SPLIT-BYTES\|LLVM-HELPERS-JOIN-BYTES\|LLVM-SEMANTICS"
+PDF_MODULES = `sed -n 's/module \(.*\) is/\1/p' llvm-semantics.k | grep -v $(IGNORED_MODULES)`
 
 llvm-compiled.maude: llvm.k llvm-syntax.k llvm-semantics.k
 	$(K_BASE)/core/kompile -u llvm
@@ -8,6 +10,15 @@ test: llvm-compiled.maude $(CURRTEST)
 
 testq: llvm-compiled.maude $(CURRTEST)
 	$(K_BASE)/core/krun --output-mode=none $(CURRTEST)
+
+pdf: llvm.k llvm-syntax.k llvm-semantics.k
+	$(K_BASE)/core/kompile -pdf $(PDF_MODULES) llvm
+
+png: llvm.k llvm-syntax.k llvm-semantics.k
+	$(K_BASE)/core/kompile -png $(PDF_MODULES) llvm
+
+latex: llvm.k llvm-syntax.k llvm-semantics.k
+	$(K_BASE)/core/kompile -latex $(PDF_MODULES) llvm
 
 linked:
 	@../dist/bin/llvm-semantics-link ../dist/share/libc.ll $(CURRTEST) -o -
